# eval-control-deepseek

./: .dockerignore  .gitignore  Dockerfile  LICENSE  __init__.py  api.py  boundary_probe_cases.jsonl  calibrate.py  calibrated_config.json  calibrated_config_v2.json  calibrated_config_v2_calibrated.jsonl  calibrated_config_v3.json  calibrated_config_v3_calibrated.jsonl  calibration_dataset.jsonl  calibration_dataset_300.jsonl  calibration_drift.jsonl  calibration_run_log.jsonl  core.py  dataset_shadow_200.json  demo.py  docker-compose.yml  drift_history.jsonl  drift_sim.py  drift_sim_results.jsonl  eval_300.py  eval_300_drift.jsonl  eval_300_log.jsonl  eval_batch.py  eval_fast.py  eval_prompts.py  gen_prompts.py  gen_shadow_200.py  outcome_capture.py  prompts_300.json  prompts_300_balanced.json  pyproject.toml  real_cases_phase1.jsonl  regression_dataset.py  release_gate.py  run_300.py  (+24 more)
data/: generated_prompts.jsonl  raw_prompts.jsonl
download/: shadow_evidence_summary.json
logs/: acquisition_budget.json  acquisition_queue.jsonl  active_learning_queue.jsonl  daily_metrics.jsonl  disagreement_cases.jsonl  failure_mining_queue.jsonl  failure_mode_analysis.json  final_metrics.json  integrity_exclusions.jsonl  shadow_eval_live.jsonl  uncertainty_audit.jsonl  uncertainty_segments.json  weekly_report_2026-04-19.json
scripts/: acquisition_policy.py  audit_uncertainty.py  batch_monitor.py  calibration_check.py  compute_daily_metrics.py  failure_mining.py  failure_mode_analysis.py  manifold_kpi.py  manifold_predict.py  predict_failure.py  reference_router.py  (+4 more)
(+85 files in other folders)
